package QMP.Clima;

public record EstadoClima(double temperatura, Humedad humedad) {
}
