package QMP.Clima;

public interface ServicioMeteorologico {
  public EstadoClima getClima(String ciudad);
}
