package QMP.Guardarropa;

public enum EstadoSugerencia {
  PENDENTE,
  ACEPTADA,
  RECHAZADA
}
